; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/axis/extr_artpec6_crypto.c_artpec6_crypto_setup_out_descr_phys.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/axis/extr_artpec6_crypto.c_artpec6_crypto_setup_out_descr_phys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.artpec6_crypto_req_common = type { %struct.artpec6_crypto_dma_descriptors* }
%struct.artpec6_crypto_dma_descriptors = type { i64, %struct.pdma_descr* }
%struct.pdma_descr = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i64, i32 }
%struct.TYPE_3__ = type { i32, i64 }

@PDMA_DESCR_COUNT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [40 x i8] c"No free OUT DMA descriptors available!\0A\00", align 1
@ENOSPC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.artpec6_crypto_req_common*, i32, i64, i32)* @artpec6_crypto_setup_out_descr_phys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @artpec6_crypto_setup_out_descr_phys(%struct.artpec6_crypto_req_common* %0, i32 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.artpec6_crypto_req_common*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.artpec6_crypto_dma_descriptors*, align 8
  %11 = alloca %struct.pdma_descr*, align 8
  store %struct.artpec6_crypto_req_common* %0, %struct.artpec6_crypto_req_common** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load %struct.artpec6_crypto_req_common*, %struct.artpec6_crypto_req_common** %6, align 8
  %13 = getelementptr inbounds %struct.artpec6_crypto_req_common, %struct.artpec6_crypto_req_common* %12, i32 0, i32 0
  %14 = load %struct.artpec6_crypto_dma_descriptors*, %struct.artpec6_crypto_dma_descriptors** %13, align 8
  store %struct.artpec6_crypto_dma_descriptors* %14, %struct.artpec6_crypto_dma_descriptors** %10, align 8
  %15 = load %struct.artpec6_crypto_dma_descriptors*, %struct.artpec6_crypto_dma_descriptors** %10, align 8
  %16 = getelementptr inbounds %struct.artpec6_crypto_dma_descriptors, %struct.artpec6_crypto_dma_descriptors* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @PDMA_DESCR_COUNT, align 8
  %19 = icmp sge i64 %17, %18
  br i1 %19, label %23, label %20

20:                                               ; preds = %4
  %21 = call i64 (...) @fault_inject_dma_descr()
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %20, %4
  %24 = call i32 @pr_err(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %25 = load i32, i32* @ENOSPC, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %5, align 4
  br label %53

27:                                               ; preds = %20
  %28 = load %struct.artpec6_crypto_dma_descriptors*, %struct.artpec6_crypto_dma_descriptors** %10, align 8
  %29 = getelementptr inbounds %struct.artpec6_crypto_dma_descriptors, %struct.artpec6_crypto_dma_descriptors* %28, i32 0, i32 1
  %30 = load %struct.pdma_descr*, %struct.pdma_descr** %29, align 8
  %31 = load %struct.artpec6_crypto_dma_descriptors*, %struct.artpec6_crypto_dma_descriptors** %10, align 8
  %32 = getelementptr inbounds %struct.artpec6_crypto_dma_descriptors, %struct.artpec6_crypto_dma_descriptors* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = add nsw i64 %33, 1
  store i64 %34, i64* %32, align 8
  %35 = getelementptr inbounds %struct.pdma_descr, %struct.pdma_descr* %30, i64 %33
  store %struct.pdma_descr* %35, %struct.pdma_descr** %11, align 8
  %36 = load %struct.pdma_descr*, %struct.pdma_descr** %11, align 8
  %37 = call i32 @memset(%struct.pdma_descr* %36, i32 0, i32 32)
  %38 = load %struct.pdma_descr*, %struct.pdma_descr** %11, align 8
  %39 = getelementptr inbounds %struct.pdma_descr, %struct.pdma_descr* %38, i32 0, i32 1
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  store i64 0, i64* %40, align 8
  %41 = load i32, i32* %9, align 4
  %42 = load %struct.pdma_descr*, %struct.pdma_descr** %11, align 8
  %43 = getelementptr inbounds %struct.pdma_descr, %struct.pdma_descr* %42, i32 0, i32 1
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 0
  store i32 %41, i32* %44, align 8
  %45 = load i64, i64* %8, align 8
  %46 = load %struct.pdma_descr*, %struct.pdma_descr** %11, align 8
  %47 = getelementptr inbounds %struct.pdma_descr, %struct.pdma_descr* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 0
  store i64 %45, i64* %48, align 8
  %49 = load i32, i32* %7, align 4
  %50 = load %struct.pdma_descr*, %struct.pdma_descr** %11, align 8
  %51 = getelementptr inbounds %struct.pdma_descr, %struct.pdma_descr* %50, i32 0, i32 0
  %52 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %51, i32 0, i32 1
  store i32 %49, i32* %52, align 8
  store i32 0, i32* %5, align 4
  br label %53

53:                                               ; preds = %27, %23
  %54 = load i32, i32* %5, align 4
  ret i32 %54
}

declare dso_local i64 @fault_inject_dma_descr(...) #1

declare dso_local i32 @pr_err(i8*) #1

declare dso_local i32 @memset(%struct.pdma_descr*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
